--- a/SAMT Cash Register/Pages/Main.razor
+++ b/SAMT Cash Register/Pages/Main.razor
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-dark fixed-bottom bg-success clean-navbar" style="padding-top: 0px;padding-bottom: 0px;">
     <div class="container">
-        <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" @onclick="() => money = _products.Sum(x => x.price).ToString(CultureInfo.CurrentCulture)"><span>@_products.Sum(x => x.price) €</span></button>
+        <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" @onclick="() => money = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture)"><span>@price €</span></button>
         @if (_products.Count != 0)
         {
             <button class="navbar-toggler shadow" data-bs-toggle="collapse" style="background: #146942;" data-bs-target="#navcol-2"><span>@_products.Count</span></button>
@@ -43,7 +43,7 @@
                         <div class="col" style="border-right-color: var(--bs-gray);border-bottom: 1px solid var(--bs-gray) ;"><button class="btn btn-light" type="button" style="width: 100%;height: 100%;font-size: 24px;" @onclick="() => AddNumber(-2)">C</button></div>
                     </div>
                     <div class="row" style="height: 100px;">
-                        <div class="col"><button class="btn btn-light" type="button" style="width: 100%;font-size: 24px;height: 100%;"><i class="far fa-money-bill-alt" style="font-size: 60px;"></i></button></div>
+                        <div class="col"><button class="btn btn-light" type="button" style="width: 100%;font-size: 24px;height: 100%;" @onclick="Checkout"><i class="far fa-money-bill-alt" style="font-size: 60px;"></i></button></div>
                     </div>
                 </li>
             </ul>
@@ -58,7 +58,7 @@
                                 {
                                     <tr>
                                         <td><strong style="margin-right: 15px;">@item.Count() </strong><span> @item.Key</span></td>
-                                        <td class="text-end"><button class="btn btn-danger" type="button" style="margin-right: 10px;" @onclick="() => _products.Remove(_products.First(x => x.product.Name.Equals(item.Key)))"><i class="fas fa-minus" style="margin-right: 0px;"></i></button><button class="btn btn-success" type="button"><i class="fas fa-plus" style="margin-right: 0px;" @onclick="() => _products.Add(_products.First(x => x.product.Name.Equals(item.Key)))"></i></button></td>
+                                        <td class="text-end"><button class="btn btn-danger" type="button" style="margin-right: 10px;" @onclick="() => { _products.Remove(_products.First(x => x.product.Name.Equals(item.Key))); ReloadPrice(); }"><i class="fas fa-minus" style="margin-right: 0px;"></i></button><button class="btn btn-success" type="button"><i class="fas fa-plus" style="margin-right: 0px;" @onclick="() => { _products.Add(_products.First(x => x.product.Name.Equals(item.Key))); ReloadPrice(); }"></i></button></td>
                                     </tr>
                                 }
                             </tbody>
@@ -80,7 +80,7 @@
                                 @foreach (var item in context.EventsProducts.Include(x => x.FkProduct).Where(x => x.FkEventId == EventId).AsEnumerable())
                                 {
                                     <div class="col-12 col-md-6 col-lg-4 col-xl-3 m-auto" style="padding-right: 20px;padding-bottom: 20px;">
-                                        <a @onclick="() => _products.Add((item.FkProduct, item.Price ?? item.FkProduct.DefaultPrice))">
+                                        <a @onclick="() => { _products.Add((item.FkProduct, item.Price ?? item.FkProduct.DefaultPrice)); ReloadPrice(); }">
                                             <div class="clean-product-item" style="box-shadow: 5px 5px 20px;border-radius: 30px;background: var(--bs-gray-300);">
                                                 <div class="image"><img class="img-fluid d-block mx-auto" src="@item.FkProduct.ImageLink" style="border-radius: 40px;"></div>
                                                 <div class="d-xl-flex justify-content-xl-center product-name"><span style="font-size: 17.8px; color: rgb(88, 88, 88);">@item.FkProduct.Name</span></div>
@@ -108,13 +108,19 @@
 
     private List<(Product product, double price)> _products = new();
 
-    private string money = "0,00";
+    private string price = "0";
+    private string money = "0.00";
+
+    private void ReloadPrice()
+    {
+        price = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture);
+    }
 
     private void AddNumber(int number)
     {
         if (number == -2)
         {
-            money = "0,00";
+            money = "0.00";
             return;
         }
 
@@ -122,13 +128,43 @@
 
         if (number == -1) insert = "00";
 
-        money = money.Replace(",", "");
+        money = money.Replace(".", "");
         money += insert;
-        money = money.Insert(money.Length - 2, ",");
+        money = money.Insert(money.Length - 2, ".");
 
         if (money.StartsWith("0"))
         {
             money = money.Remove(0, insert.Length);
         }
+    }
+
+    private void Checkout()
+    {
+        var context = DbContextFactory.CreateDbContext();
+
+        var time = DateTime.Now;
+        foreach (var (product, _) in _products)
+        {
+            context.Sales.Add(new()
+            {
+                DateTime = time,
+                FkEventId = EventId,
+                FkProductId = product.Id,
+            });
+        }
+        context.SaveChanges();
+
+        Console.WriteLine(double.Parse(money));
+        Console.WriteLine(double.Parse(price));
+        Console.WriteLine(double.Parse(money) - double.Parse(price));
+        Console.WriteLine(double.Parse(price) - double.Parse(money));
+
+        var numberMoney = double.Parse(money.Replace('.', ','));
+        var numberPrice = double.Parse(price.Replace('.', ','));
+        var numberChange = numberMoney - numberPrice;
+
+        price = numberMoney >= numberPrice ? $"Rückgeld: { numberChange }" : $"Fehlend: { numberChange }";
+
+        _products.Clear();
     }
 }
