--- a/SAMT Cash Register/Pages/Main.razor
+++ b/SAMT Cash Register/Pages/Main.razor
@@ -11,12 +11,12 @@
 
 <nav class="navbar navbar-dark fixed-bottom bg-success clean-navbar" style="padding-top: 0px;padding-bottom: 0px;">
     <div class="container">
-        <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" @onclick="() => money = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture)"><span>@price €</span></button>
+        <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center collapsed" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" aria-expanded="false" @onclick="() => money = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture)"><span>@price €</span></button>
         @if (_products.Count != 0)
         {
             <button class="navbar-toggler shadow" data-bs-toggle="collapse" style="background: #146942;" data-bs-target="#navcol-2"><span>@_products.Count</span></button>
         }
-        <div class="collapse navbar-collapse bg-white" id="navcol-1">
+        <div class="collapse navbar-collapse bg-white collapse show" id="navcol-1">
             <ul class="navbar-nav">
                 <li class="nav-item text-white" style="padding-right: 0px;">
                     <div class="row" style="height: 100px;">
