--- a/SAMT Cash Register/Pages/Main.razor
+++ b/SAMT Cash Register/Pages/Main.razor
@@ -172,10 +172,8 @@
         _products.Clear();
     }
 
-    private void Expand() {
-        if(_products.Length != 0)
-        {
-            expanded = "show";
-        }
+    private void Expand()
+    {
+        if (_products.Length != 0) expanded = "show";
     }
 }
