--- a/SAMT Cash Register/Pages/SelectCashbox.razor
+++ b/SAMT Cash Register/Pages/SelectCashbox.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/{EventId:int}"
 @using Microsoft.EntityFrameworkCore
 @using Database.Models
 
@@ -16,13 +16,13 @@
                     <div class="col">
                         <div class="products">
                             <div class="row g-0">
-                                @foreach (var samt in context.Events)
+                                @foreach (var cashbox in context.Cashboxes)
                                 {
                                     <div class="col-12 col-md-6 col-lg-4 col-xl-3 m-auto" style="padding-right: 20px; padding-bottom: 20px;">
-                                        <NavLink href="@($"/{samt.Id}")">
+                                        <NavLink href="@($"/main/{EventId}/{cashbox.Id}")">
                                             <div class="clean-product-item" style="box-shadow: 5px 5px 20px; border-radius: 30px;">
-                                                <div class="image"><img class="img-fluid d-block mx-auto" src="@samt.ImageLink" style="border-radius: 40px;"></div>
-                                                <div class="d-xl-flex justify-content-xl-center product-name"><span style="font-size: 17.8px; color: rgb(88, 88, 88);">@samt.Name</span></div>
+                                                <div class="image"><img class="img-fluid d-block mx-auto" src="@(string.IsNullOrWhiteSpace(cashbox.ImageLink) ? "https://www.galeria.de/dw/image/v2/karstadt/APInoauth/storage/VX-1/file/VX-3887146/0.8350725428708906/VX-3887146.jpeg?sw=1200&sh=1200&sm=fit" : cashbox.ImageLink)" style="border-radius: 40px;"></div>
+                                                <div class="d-xl-flex justify-content-xl-center product-name"><span style="font-size: 17.8px; color: rgb(88, 88, 88);">@cashbox.Name</span></div>
                                             </div>
                                         </NavLink>
                                     </div>
@@ -37,5 +37,6 @@
 </main>
 
 @code {
-
+    [Parameter]
+    public int EventId { get; set; }
 }
