--- a/SAMT Cash Register/Pages/Main.razor
+++ b/SAMT Cash Register/Pages/Main.razor
@@ -1,4 +1,4 @@
-﻿@page "/main/{EventId:int}"
+﻿@page "/main/{EventId:int}/{CashboxId:int}"
 @using Microsoft.EntityFrameworkCore
 @using System.Globalization
 @using Database.Models
@@ -11,12 +11,12 @@
 
 <nav class="navbar navbar-dark fixed-bottom bg-success clean-navbar" style="padding-top: 0px;padding-bottom: 0px;">
     <div class="container">
-        <a data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" @onclick="() => { Expand(); money = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture); }"><span>@price €</span></a>
+        <button class="navbar-toggler text-center text-white d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" style="font-size: 24px;border-style: none;padding-top: 25px;padding-bottom: 25px;margin-right: 30px;" @onclick="() => { Expand(); money = _products.Sum(x => x.price).ToString(CultureInfo.InvariantCulture); }"><span>@price €</span></button>
         @if (_products.Count != 0)
         {
             <button class="navbar-toggler shadow" data-bs-toggle="collapse" style="background: #146942;" data-bs-target="#navcol-2"><span>@_products.Count</span></button>
         }
-        <div class="collapse navbar-collapse bg-white collapse @expanded" id="navcol-1">
+        <div class="navbar-collapse bg-white collapse @expanded">
             <ul class="navbar-nav">
                 <li class="nav-item text-white" style="padding-right: 0px;">
                     <div class="row" style="height: 100px;">
@@ -105,13 +105,16 @@
 @code {
     [Parameter]
     public int EventId { get; set; }
+    
+    [Parameter]
+    public int CashboxId { get; set; }
 
     private List<(Product product, double price)> _products = new();
 
     private string price = "0";
     private string money = "0.00";
 
-    private string expanded = string.Empty();
+    private string expanded = string.Empty;
 
     private void ReloadPrice()
     {
@@ -174,6 +177,15 @@
 
     private void Expand()
     {
-        if (_products.Length != 0) expanded = "show";
+        if (!string.IsNullOrWhiteSpace(expanded))
+        {
+            expanded = string.Empty;
+            return;
+        }
+        if (_products.Count != 0)
+        {
+            expanded = "show";
+            return;
+        }
     }
 }
