Added covid rules

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -60,6 +60,8 @@
         <div class="container">
             <div class="block-heading">
                 <h1 style="color: #ff6f71;font-weight: bold;">Veranstaltung</h1><img class="img-fluid shadow-lg" src="assets/img/SAMT_Rückseite_Spring.png?h=17f9d45adbe2f09309287a674b253ab3" width="800px" style="border-width: 7px;border-style: solid;border-radius: 25px;">
+                <h2 style="color: #ff6f71;margin-top: 18px;">Eintritt</h2>
+                <p style="color: rgb(255,255,255);">Bei uns gilt <strong>3G</strong>!<br>Damit setzen wir uns eine Stufe höher als uns das Land vorschreibt, jedoch möchten wir sowohl euch als auch uns keinem vermeidbarem Risiko aussetzen und trotzdem eine schönes Event bieten.<br>Wir bitten um Verständnis!</p>
             </div>
         </div>
     </section>
