--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -59,8 +59,11 @@
     <section class="clean-block clean-info dark" style="background: var(--bs-gray-dark);">
         <div class="container">
             <div class="block-heading">
-                <h1 style="color: #ff6f71;font-weight: bold;">Veranstaltung</h1><img class="img-fluid shadow-lg" src="assets/img/SAMT_Rückseite_Spring.png?h=17f9d45adbe2f09309287a674b253ab3" width="800px" style="border-width: 7px;border-style: solid;border-radius: 25px;">
+                <h1 style="color: #ff6f71;font-weight: bold;">Veranstaltung</h1>
                 <h2 style="color: #ff6f71;margin-top: 18px;">Eintritt</h2>
+                <p style="color: rgb(255,255,255);"><strong>0,99 €</strong><br>Alles darüber ist eine Spende und wird für das nächste SAMT XL gespart.<br>Wir freuen uns auf euch!</p>
+                <h2 style="color: #ff6f71;margin-top: 18px;">Flyer</h2><img class="img-fluid shadow-lg" src="assets/img/SAMT_Rückseite_Spring.png?h=17f9d45adbe2f09309287a674b253ab3" width="800px" style="border-width: 7px;border-style: solid;border-radius: 25px;">
+                <h2 style="color: #ff6f71;margin-top: 18px;">Corona</h2>
                 <p style="color: rgb(255,255,255);">Bei uns gilt <strong>3G</strong>!<br>Damit setzen wir uns eine Stufe höher als uns das Land vorschreibt, jedoch möchten wir sowohl euch als auch uns keinem vermeidbarem Risiko aussetzen und trotzdem eine schönes Event bieten.<br>Wir bitten um Verständnis!</p>
             </div>
         </div>
