Updated database models Added SalesLocation

--- a/SAMT-Cash-Register/Pages/Main.razor
+++ b/SAMT-Cash-Register/Pages/Main.razor
@@ -1,4 +1,4 @@
-﻿@page "/main/{EventId:int}/{CashboxId:int}"
+﻿@page "/{EventId:int}/{CashboxId:int}"
 @using Microsoft.EntityFrameworkCore
 @using System.Globalization
 @using Database.Models
