--- a/SAMT-Cash-Register/Pages/Main.razor
+++ b/SAMT-Cash-Register/Pages/Main.razor
@@ -1,4 +1,4 @@
-﻿@page "/{EventId:int}/{CashboxId:int}"
+﻿@page "/{EventId:int}/{CashboxId:int}/{SalesLocationId:int}"
 @using Microsoft.EntityFrameworkCore
 @using System.Globalization
 @using Database.Models
@@ -77,7 +77,7 @@
                     <div class="col">
                         <div class="products">
                             <div class="row g-0" style="border-style: none;">
-                                @foreach (var item in context.EventsProducts.Include(x => x.FkProduct).Where(x => x.FkEventId == EventId).AsEnumerable())
+                                @foreach (var item in context.EventsProducts.Include(x => x.FkProduct).Where(x => x.FkEventId == EventId).Where(x => x.FkSalesLocationId == SalesLocationId).AsEnumerable())
                                 {
                                     <div class="col-auto m-auto" style="padding-right: 20px;padding-bottom: 20px;">
                                         <a @onclick="() => { _products.Add((item.FkProduct, item.Price ?? item.FkProduct.DefaultPrice)); ReloadPrice(); }">
@@ -108,6 +108,9 @@
     
     [Parameter]
     public int CashboxId { get; set; }
+    
+    [Parameter]
+    public int SalesLocationId { get; set; }
 
     private List<(Product product, double price)> _products = new();
 
