Removed old info

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <section class="clean-block clean-info dark" style="background: var(--bs-gray-dark);">
+    @*<section class="clean-block clean-info dark" style="background: var(--bs-gray-dark);">
         <div class="container">
             <div class="block-heading">
                 <h1 style="color: #ff6f71;font-weight: bold;">Veranstaltung</h1>
@@ -67,7 +67,7 @@
                 <p style="color: rgb(255,255,255);">Bei uns gilt <strong>3G</strong>!<br>Damit setzen wir uns eine Stufe höher als uns das Land vorschreibt, jedoch möchten wir sowohl euch als auch uns keinem vermeidbarem Risiko aussetzen und trotzdem eine schönes Event bieten.<br>Wir bitten um Verständnis!</p>
             </div>
         </div>
-    </section>
+    </section>*@
 </main>
 
 @code
