--- a/SAMT-Admin-Panel/Pages/_Layout.cshtml
+++ b/SAMT-Admin-Panel/Pages/_Layout.cshtml
@@ -26,7 +26,10 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    
+<script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
+<script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
 
-    <script src="_framework/blazor.server.js"></script>
+<script src="_framework/blazor.server.js"></script>
 </body>
 </html>
