--- a/SAMT-Admin-Panel/Pages/_Layout.cshtml
+++ b/SAMT-Admin-Panel/Pages/_Layout.cshtml
@@ -5,9 +5,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <base href="~/" />
+    
+    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d2918ce175b06910050faab4289953ff">
+    <link rel="stylesheet" href="assets/css/styles.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="SAMT-Admin-Panel.styles.css" rel="stylesheet" />
@@ -29,6 +38,9 @@
     
 <script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
 <script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
+
+<script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
 
 <script src="_framework/blazor.server.js"></script>
 </body>
